syntax = "proto3";

package com.congcoi123.example.backend.skill;

option java_multiple_files = true;
option java_outer_classname = "SkillApiProto";
option java_package = "com.congcoi123.example.backend.proto.skill";

import "skill.proto";

service SkillAPI {
  rpc CastSkill(CastSkillRequest) returns (CastSkillResponse);
  rpc CastComboSkill(stream CastSkillRequest) returns (CastSkillResponse);
  rpc CastMultipleSkill(stream CastSkillRequest) returns (stream CastSkillResponse);
}

message CastSkillRequest {
  Skill skill = 1;
}

message CastSkillResponse {
  CastedSkill result = 1;
}

message CastedSkill {
  uint64 skill_id = 1;
  bool effective = 2;
}
